Fix lang switcher wrapping on mobile when space is available

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -622,9 +622,6 @@ body::after {
 
 /* --bp-md = 40rem - 640px */
 @media (width < 40rem) {
-  .status-pill {
-    flex: 1 1 100%;
-  }
   .lang-switch {
     margin-left: auto;
   }
